--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.3.1",
     "swiper": "^10.1.0",
     "vue": "^3.3.4",
+    "vue-debounce": "^4.0.0",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
