--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "firebase": "^10.3.1",
+    "pinia": "^2.1.7",
     "swiper": "^10.1.0",
     "vue": "^3.3.4",
     "vue-debounce": "^4.0.0",
