--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
+    "axios": "^1.7.1",
     "firebase": "^10.3.1",
     "pinia": "^2.1.7",
     "swiper": "^10.1.0",
     "vue": "^3.3.4",
+    "vue-axios": "^3.5.2",
     "vue-debounce": "^4.0.0",
     "vue-router": "^4.2.4"
   },
